[gd_scene load_steps=39 format=3 uid="uid://dlyxvs2hkjynk"]

[ext_resource type="Script" path="res://scripts/water_gun.gd" id="1_60lgm"]
[ext_resource type="Texture2D" uid="uid://duwka1v7h3fq1" path="res://assets/weapon-sprites/weaponsprite.png" id="2_r6y6g"]
[ext_resource type="Texture2D" uid="uid://bcc65tnfjlm6x" path="res://assets/weapon-sprites/Water_spray_strip15.png" id="4_8qj3v"]
[ext_resource type="Texture2D" uid="uid://crhi4icl2du43" path="res://assets/weapon-sprites/Spurt_strip.png" id="4_a1sg3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a5wgd"]
atlas = ExtResource("2_r6y6g")
region = Rect2(0, 0, 1552, 1646)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdixb"]
atlas = ExtResource("2_r6y6g")
region = Rect2(1552, 0, 1552, 1646)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xfba"]
atlas = ExtResource("2_r6y6g")
region = Rect2(3104, 0, 1552, 1646)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki8qo"]
atlas = ExtResource("2_r6y6g")
region = Rect2(4656, 0, 1552, 1646)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebdhf"]
atlas = ExtResource("2_r6y6g")
region = Rect2(6208, 0, 1552, 1646)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v11m"]
atlas = ExtResource("2_r6y6g")
region = Rect2(7760, 0, 1552, 1646)

[sub_resource type="AtlasTexture" id="AtlasTexture_it32y"]
atlas = ExtResource("2_r6y6g")
region = Rect2(9312, 0, 1552, 1646)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nk5j"]
atlas = ExtResource("2_r6y6g")
region = Rect2(10864, 0, 1552, 1646)

[sub_resource type="SpriteFrames" id="SpriteFrames_t7eal"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5wgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdixb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xfba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki8qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebdhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v11m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it32y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nk5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki8qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xfba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdixb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5wgd")
}],
"loop": false,
"name": &"reload",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"shoot",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_w4vb4"]
atlas = ExtResource("4_a1sg3")
region = Rect2(0, 0, 1560, 1120)

[sub_resource type="AtlasTexture" id="AtlasTexture_74xka"]
atlas = ExtResource("4_a1sg3")
region = Rect2(1560, 0, 1560, 1120)

[sub_resource type="AtlasTexture" id="AtlasTexture_40ujh"]
atlas = ExtResource("4_a1sg3")
region = Rect2(3120, 0, 1560, 1120)

[sub_resource type="AtlasTexture" id="AtlasTexture_37e6u"]
atlas = ExtResource("4_a1sg3")
region = Rect2(4680, 0, 1560, 1120)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i5xv"]
atlas = ExtResource("4_a1sg3")
region = Rect2(6240, 0, 1560, 1120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri7av"]
atlas = ExtResource("4_a1sg3")
region = Rect2(7800, 0, 1560, 1120)

[sub_resource type="AtlasTexture" id="AtlasTexture_k14rn"]
atlas = ExtResource("4_a1sg3")
region = Rect2(9360, 0, 1560, 1120)

[sub_resource type="AtlasTexture" id="AtlasTexture_motu3"]
atlas = ExtResource("4_a1sg3")
region = Rect2(10920, 0, 1560, 1120)

[sub_resource type="SpriteFrames" id="SpriteFrames_xc1nl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4vb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74xka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40ujh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37e6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i5xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri7av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k14rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_motu3")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 45.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_n3v5v"]
atlas = ExtResource("4_8qj3v")
region = Rect2(0, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt6jj"]
atlas = ExtResource("4_8qj3v")
region = Rect2(230, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsphe"]
atlas = ExtResource("4_8qj3v")
region = Rect2(460, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7hcl"]
atlas = ExtResource("4_8qj3v")
region = Rect2(690, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdhac"]
atlas = ExtResource("4_8qj3v")
region = Rect2(920, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_halpn"]
atlas = ExtResource("4_8qj3v")
region = Rect2(1150, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2hk3"]
atlas = ExtResource("4_8qj3v")
region = Rect2(1380, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0uxl"]
atlas = ExtResource("4_8qj3v")
region = Rect2(1610, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1hv7"]
atlas = ExtResource("4_8qj3v")
region = Rect2(1840, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgbxi"]
atlas = ExtResource("4_8qj3v")
region = Rect2(2070, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_q226u"]
atlas = ExtResource("4_8qj3v")
region = Rect2(2300, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc5ap"]
atlas = ExtResource("4_8qj3v")
region = Rect2(2530, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7p5k"]
atlas = ExtResource("4_8qj3v")
region = Rect2(2760, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_o42su"]
atlas = ExtResource("4_8qj3v")
region = Rect2(2990, 0, 230, 593)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtty5"]
atlas = ExtResource("4_8qj3v")
region = Rect2(3220, 0, 230, 593)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnwv5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3v5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt6jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsphe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7hcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdhac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_halpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2hk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0uxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1hv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgbxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q226u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc5ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7p5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o42su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtty5")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 90.0
}]

[node name="WaterGun" type="Node2D"]
script = ExtResource("1_60lgm")

[node name="Watergun" type="AnimatedSprite2D" parent="."]
position = Vector2(-43, 208)
scale = Vector2(0.360825, 0.360825)
sprite_frames = SubResource("SpriteFrames_t7eal")
animation = &"reload"

[node name="ReloadSpurt" type="AnimatedSprite2D" parent="Watergun"]
position = Vector2(121.486, -92.162)
rotation = -3.14159
scale = Vector2(1.06662, 1.06662)
sprite_frames = SubResource("SpriteFrames_xc1nl")

[node name="ShootSpurt2" type="AnimatedSprite2D" parent="Watergun"]
position = Vector2(108.919, -561.351)
rotation = -6.27665
scale = Vector2(0.631455, 0.631455)
sprite_frames = SubResource("SpriteFrames_xc1nl")

[node name="ShootSpurt" type="AnimatedSprite2D" parent="Watergun"]
position = Vector2(113.108, -850.404)
sprite_frames = SubResource("SpriteFrames_wnwv5")
